2024-08-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCopt.c,
	  src/SDCCsymt.c,
	  support/regression/tests/bug-3766.c:
	  Fix bug #3766.
	* src/pic16/glue.c:
	  Try to fix bug #3767.

2024-08-04 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/include/setjmp.h,
	  sim/ucsim/src/sims/f8.src/decode.h,
	  sim/ucsim/src/sims/f8.src/f8cl.h,
	  sim/ucsim/src/sims/f8.src/glob.cc,
	  sim/ucsim/src/sims/f8.src/imove.cc,
	  support/regression/tests/rotate.c.in:
	  f8 fixes.

2024-08-04 Philipp Klaus Krause <philipp@colecovision.eu>

	* Merge sdcc from f8 branch to trunk.

2024-08-04 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/gen.c:
	  Small f8 codegen improvements.

2024-08-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdas/asf8/f8mch.c,
	  src/f8/gen.c:
	  Adapt to instruction changes.

2024-07-31 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/lib/f8/Makefile.in,
	  sdas/asf8/f8mch.c,
	  src/f8/gen.c:
	  Replace xchb by modified msk.

2024-07-29 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdas/asf8/f8mch.c:
	  Update xchw instruction.

2024-06-24 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/ports/f8/spec.mk:
	  Adapt f8 regression testing to new simulator directory structure.

2024-07-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/wchar.c.in: added _FORTIFY_SOURCE==3 exception

2024-07-23 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/cases/HTMLgen.py: fixed bad escape no longer accepted
	  by Python 3.12

2024-07-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/z80/__ultobcd.s: removed comments about odd ABI,
	  added .optsdcc -mz80 sdcccall(1)

2024-07-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/ds390/__sdcc_atomic_maybe_rollback.c: bugfix moved push psw,
	  renamed __sdcc_atomic_exchange_rollback_impl to sdcc_atomic_exchange_rollback_start,